@@ -526,3 +526,12 @@ class InMemoryDB(AtomDB):
         except Exception:
             logger().error("Error bulk inserting documents")
             return None
+
+    def retrieve_all_documents(self) -> List[Dict[str, Any]]:
+        try:
+            answer = list(self.db.node.items())
+            answer.extend(list(self.db.link.items()))
+            return answer
+        except Exception as e:
+            logger().error(f"Error retrieving all atoms: {str(e)}")
+            raise e
